# ip-socket-project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
assets/fonts/: Montserrat-Regular.ttf:Zone.Identifier  amogus.ttf:Zone.Identifier
assets/image/: background.jpg:Zone.Identifier  losescreen.png:Zone.Identifier  wallbackground.jpg:Zone.Identifier  winscreen.png:Zone.Identifier
client/: constant.h  gameinfo.h  main.cpp  main.h  packet.h  player.cpp  player.h  question.cpp  question.h  screen.cpp  screen.h  welcomeScreen.cpp  welcomeScreen.h
client/include/: constant.h  logger.h  main.h  player.h  question.h  screen.h
client/src/: main.cpp  player.cpp  player.service.cpp  question.cpp  screen.cpp
data/: animals.csv  funny.csv  general.csv  question.csv
ipsocket/: ipsocket.sln
ipsocket/TGUI-1.0-nightly/doc/html/: _absolute_or_relative_value_8hpp_source.html  _all_widgets_8hpp_source.html  _animation_8hpp_source.html  _any_8hpp_source.html  _backend_8hpp_source.html  _backend_font_8hpp_source.html  _backend_font_factory_8hpp_source.html  _backend_font_free_type_8hpp_source.html  _backend_font_s_d_lttf_8hpp_source.html  _backend_font_s_f_m_l_8hpp_source.html  _backend_g_l_f_w_8hpp_source.html  _backend_gui_8hpp_source.html  _backend_gui_g_l_f_w_8hpp_source.html  _backend_gui_s_d_l_8hpp_source.html  _backend_gui_s_f_m_l_8hpp_source.html  _backend_render_target_8hpp_source.html  _backend_render_target_g_l_e_s2_8hpp_source.html  _backend_render_target_open_g_l3_8hpp_source.html  _backend_render_target_s_d_l_8hpp_source.html  _backend_render_target_s_f_m_l_8hpp_source.html  _backend_renderer_8hpp_source.html  _backend_renderer_g_l_e_s2_8hpp_source.html  _backend_renderer_open_g_l3_8hpp_source.html  _backend_renderer_s_d_l_8hpp_source.html  _backend_renderer_s_f_m_l_8hpp_source.html  _backend_s_d_l_8hpp_source.html  _backend_s_f_m_l_8hpp_source.html  _backend_text_8hpp_source.html  _backend_texture_8hpp_source.html  _backend_texture_g_l_e_s2_8hpp_source.html  _backend_texture_open_g_l3_8hpp_source.html  _backend_texture_s_d_l_8hpp_source.html  _backend_texture_s_f_m_l_8hpp_source.html  _base64_8hpp_source.html  _bitmap_button_8hpp_source.html  _box_layout_8hpp_source.html  _box_layout_ratios_8hpp_source.html  _box_layout_renderer_8hpp_source.html  _button_8hpp_source.html  _button_base_8hpp_source.html  (+618 more)
ipsocket/TGUI-1.0-nightly/tests/: Font.cpp
ipsocket/ipsocket/: ipsocket.vcxproj  main.cpp
ipsocket/ipsocket/x64/Debug/: ipsocket.exe.recipe  ipsocket.ilk  vc143.idb
ipsocket/ipsocket/x64/Release/: ipsocket.exe.recipe  ipsocket.iobj  ipsocket.ipdb
server/: constant.h  debug.h  game.cpp  game.h  handler.cpp  main.cpp  player.cpp  player.h  question.cpp  question.h  random.cpp  random.h  service.cpp  utility.h
server/include/: constant.h  game.h  player.h  question.h  socket.h
server/src/: game.cpp  game.handler.cpp  game.service.cpp  main.cpp  player.cpp  question.cpp  random.cpp
(+65 files in other folders)
